@@ -45,6 +45,7 @@ $m0="%rbx";
 $m1="%rbp";
 
 $code=<<___;
+.section .note.GNU-stack,"",\@progbits
 .text
 
 .globl	bn_mul_mont
