@@ -82,6 +82,7 @@ $YY="%r12";
 $TY="%r13";
 
 $code=<<___;
+.section .note.GNU-stack,"",\@progbits
 .text
 
 .globl	RC4
