@@ -178,6 +178,8 @@ ___
 }
 
 $code=<<___;
+.section .note.GNU-stack,"",\@progbits
+
 .text
 
 .globl	$func
